# libvirt-remote-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
libvirt-remote/: Cargo.toml
libvirt-remote/src/: binding.rs  client.rs  error.rs  lib.rs  protocol.rs
libvirt-remote/tools/: gen.rs  gen.sh
virsh/: Cargo.toml
virsh/src/: cpu_stats.rs  error.rs  iface_list.rs  kv_view.rs  main.rs  nodeinfo.rs  pool_event.rs  table_view.rs  util.rs  version.rs  vol_download.rs  vol_upload.rs
virsh/src/cmd/: cpu_stats.rs  destroy.rs  iface_list.rs  mod.rs  nodeinfo.rs  pool_event.rs  qemu_agent_command.rs  start.rs  version.rs  vol_download.rs  vol_upload.rs
virsh/src/locale/: en-us.txt  ja-jp.txt  mod.rs
