[package]
name = "libvirt_remote"
keywords = ["libvirt"]
categories = ["api-bindings"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log = "0.4.20"
serde = { version="1.0.183", features=["derive"] }
serde_xdr = { git="https://github.com/9506hqwy/xdr-rs", tag="0.4.0" }

[dev-dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version="2.0.29", features=["full"] }

[[example]]
name = "libvirt-remote-gen"
path = "tools/gen.rs"
