[package]
name = "virsh"
version = "0.2.0"
authors = ["9506hqwy"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/9506hqwy/libvirt-remote-rs"
license = "MIT OR Apache-2.0"
keywords = ["libvirt"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.19"
clap = "3.1.15"
env_logger = "0.9.0"
fluent = "0.16.0"
fluent-langneg = "0.13.0"
libvirt_remote = { path="../libvirt-remote" }
log = "0.4.17"
once_cell = "1.10.0"
unic-langid = { version="0.9.0", features=["macros"] }
unicode-width = "0.1.9"
url = "2.2.2"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.125"

[target.'cfg(windows)'.dependencies.windows]
version = "0.36.1"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Globalization",
]
