[package]
name = "virsh"
keywords = ["libvirt"]
categories = ["command-line-utilities"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.26"
clap = "4.3.23"
env_logger = "0.10.0"
fluent = "0.16.0"
fluent-langneg = "0.13.0"
libvirt_remote = { path="../libvirt-remote" }
log = "0.4.20"
unic-langid = { version="0.9.1", features=["macros"] }
unicode-width = "0.1.10"
url = "2.4.0"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.147"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.0"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
]
